# de-zoomcamp-course

./: .gitignore  .markdownlint.jsonc  README.md
hw04/dbt/: dbt_project.yml
hw04/dbt/models/core/: hw04_fact_trips.sql  schema.yml
hw04/dbt/models/staging/: hw04_stg_green_tripdata.sql  hw04_stg_yellow_tripdata.sql  schema.yml
hw04/dbt/seeds/: seeds_properties.yml
scripts/: get-yellow-ny-taxi-data.sh
w01/: load_csv_data_into_pg.ipynb  pyproject.toml
w01/0-docker-probe/: Dockerfile  README.md  app.py  run-postgres-docker.sh
w01/1-data-uploader/: Dockerfile  app.py  load_csv_data_into_pg.ipynb  load_csv_data_into_pg_hw3.ipynb  requirements.txt
w01/1-data-uploader/src/: uploader.py
w01/1-data-uploader/src/core/: cli.py
w01/1-data-uploader/src/handlers/: base.py  files.py  urls.py
w01/hw/01/: hw-01.sh  readme.md
w01/hw/02/: docker-compose.yml  hw-02.sh  readme.md
w01/hw/03/: readme.md
w01/hw/04/: readme.md
w01/hw/05/: readme.md
w01/hw/06/: readme.md
w02/: readme.md
w02/dockers/kestra/: docker-compose.yml  readme.md
w02/dockers/postgres/: docker-compose.yml
w02/flows/: zoomcamp.06_gcp_taxi_scheduled.yml  zoomcamp.postgres_taxi.yml
w02/hw/: readme.md
w03/: readme.md
w03/flows/: flow.yaml
w03/hw/: 00_create_native_table.sql  01.sql  02_ext.sql  02_nat.sql  03.sql  04.sql  05.sql  06_non_partition.sql  ext_table_def.json  o6_partition.sql
w04/: readme.md
w04/dbt/: dbt_project.yml
w04/dbt/models/core/: hw04_dim_taxi_trips_monthly_fare_p95.sql  (+6 more)
w04/flows/: flow.yaml
w05/: hw05_batch_spark.ipynb  test_spark.ipynb  test_spark.py
(+4 files in other folders)
